# lolita

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  effect_registry.cpp  effect_registry.h  lolita.cpp  lolita.h  main.cpp  renderer.cpp  renderer.h
